# eml_tool_py

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  eml-list.py  eml-rename.py  eml-search.py  grep-eml.py  grep-emlheader.py  memo.txt  pyproject.toml  rename-eml.py
src/eml_tool_py/: __init__.py  eml_list.py  eml_rename.py  eml_search.py
