[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eml-tool-py"
version = "0.1.0"
description = "EML(이메일) 파일을 분석, 검색, 관리하는 Python 도구 모음"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "ygpark", email = "ygpark@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
eml-list = "eml_tool_py.eml_list:main"
eml-rename = "eml_tool_py.eml_rename:main"
eml-search = "eml_tool_py.eml_search:main"

[project.urls]
Homepage = "https://github.com/ygpark/eml_tool_py"
Repository = "https://github.com/ygpark/eml_tool_py"

[tool.hatch.build.targets.wheel]
packages = ["src/eml_tool_py"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["eml_tool_py"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
# 개발 단계에서는 완화된 설정 사용
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "email.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "black>=24.8.0",
    "mypy>=1.14.1",
    "ruff>=0.13.1",
]
